// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditUserModal renders the edit user modal 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={0}
  contentLabel="Edit User Modal"
  isOpen={true}
  onRequestClose={[Function]}
  overlayClassName="modal__background"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  role="dialog"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <div
    className="modal__top"
  >
    <h2>
      Edit User
    </h2>
    <button
      aria-label="close modal"
      onClick={[Function]}
      type="button"
    >
      <i
        aria-hidden="true"
        className="material-icons"
      >
        close
      </i>
    </button>
  </div>
  <form>
    <div
      className="modal__main"
    >
      <div
        className="row"
      >
        <div
          className="column u-half"
        >
          <div
            className="input"
          >
            <label
              htmlFor="user_name"
            >
              Name
            </label>
            <input
              id="user_name"
              name="name"
              onChange={[Function]}
              type="text"
              value="George Washington"
            />
            <span>
              Was: Jeffery Danish
            </span>
          </div>
          <div
            className="input"
          >
            <label
              htmlFor="user_sis_user_id"
            >
              SIS ID
            </label>
            <input
              id="user_sis_user_id"
              name="sisUserId"
              onChange={[Function]}
              type="text"
              value="george_123"
            />
          </div>
          <div
            className="input"
          >
            <label
              htmlFor="user_email"
            >
              Email
            </label>
            <input
              id="user_email"
              name="email"
              onChange={[Function]}
              type="email"
              value="countryfather@revolution.com"
            />
          </div>
        </div>
        <div
          className="column u-half"
        >
          <div
            className="input"
          >
            <label
              htmlFor="user_login_id"
            >
              Login ID
            </label>
            <input
              id="user_login_id"
              name="loginId"
              onChange={[Function]}
              type="text"
              value="countryfather@revolution.com"
            />
          </div>
          <div
            className="input"
          >
            <label
              htmlFor="user_password"
            >
              New Password
            </label>
            <input
              id="user_password"
              name="password"
              onChange={[Function]}
              placeholder="****************"
              type="password"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="modal__bottom"
    >
      <p>
        Are you sure you want to make the current changes to this user?
      </p>
      <button
        className="btn btn--outline"
      >
        Cancel
      </button>
      <button
        className="btn btn--primary"
        onClick={[Function]}
        type="submit"
      >
        Update
      </button>
    </div>
  </form>
</Modal>
`;

exports[`EditUserModal when the user clicks the Update button renders the changed attributes 1`] = `
<form>
  <label
    htmlFor="user_name"
  >
    Name
    <input
      id="user_name"
      name="name"
      onChange={[Function]}
      type="text"
      value="Updated Name"
    />
    Was: George Washington
  </label>
  <label
    htmlFor="user_login_id"
  >
    Login ID
    <input
      id="user_login_id"
      name="loginId"
      onChange={[Function]}
      type="text"
      value="Updated Login Id"
    />
    Was: countryfather@revolution.com
  </label>
  <label
    htmlFor="user_password"
  >
    Password
    <input
      id="user_password"
      name="password"
      onChange={[Function]}
      placeholder="****************"
      type="password"
      value="Updated Password"
    />
    Changed
  </label>
  <label
    htmlFor="user_sis_user_id"
  >
    SIS ID
    <input
      id="user_sis_user_id"
      name="sisUserId"
      onChange={[Function]}
      type="text"
      value="Updated SIS ID"
    />
    Was: george_123
  </label>
  <label
    htmlFor="user_email"
  >
    Email
    <input
      id="user_email"
      name="email"
      onChange={[Function]}
      type="email"
      value="Updated Email"
    />
    Was: countryfather@revolution.com
  </label>
  <span>
    Are you sure you want to apply the current changes to this user?
  </span>
  <button
    className="red"
    onClick={[Function]}
    type="button"
  >
    Cancel
  </button>
  <button
    className="green"
    onClick={[Function]}
    type="submit"
  >
    Confirm
  </button>
</form>
`;
